# deep_learning

./: README.md  readme.md
PROJECT_RK/: Makefile  png2jpg.py  run.sh  版本管理.txt
PROJECT_RK-20230223/: backup.sh  run.sh
PROJECT_RK-20230223/BLL_TEST/: Makefile
PROJECT_RK-20230223/BLL_TEST/include/: test.h  testFuncs.h
PROJECT_RK-20230223/BLL_TEST/src/: Makefile  camera.cpp  ptzControl.cpp
PROJECT_RK-20230223/TESTS/: main.cpp  test_opencv.cpp  test_yolov5.cpp
PROJECT_RK-20230223/TESTS/seg_postprocess/: segResPostProcessing.cpp  segResPostProcessing.h
PROJECT_RK-20230223/data/: test.h265
PROJECT_RK-20230223/include/: Configer.hpp  ProcessMgr.hpp  Uart.hpp  common.h
PROJECT_RK-20230223/models/: unetpp-0831.rknn
PROJECT_RK-20230223/src/ENN/: Yolo.cpp  classify.cpp  segResPostProcessing.cpp
PROJECT_RK-20230223/src/common/: Configer.cpp
PROJECT_RK-20230223/src/interface/: Uart.cpp
PROJECT_RK-20230223/src/process/: CapProcess.cpp  CapProcess.hpp  DetectProcess.hpp  ProcessMgr.cpp  SegProcess.hpp
PROJECT_RK-20230223/tools/Cap/: readme.txt  rtsp_cap.py
PROJECT_RK-20230223/tools/Undistort/: draw_chessboard.py
PROJECT_RK-20230306/: README.md
PROJECT_RK-20230306/TESTS/: main.cpp  test_configer.cpp  test_seg.cpp  test_uart.cpp
PROJECT_RK-20230306/TESTS/backup/: Makefile
PROJECT_RK-20230306/include/: ProcessMgr.hpp
PROJECT_RK-20230306/src/ENN/: Segmentation.cpp
PROJECT_RK-20230306/src/common/: Configer.cpp
PROJECT_RK-20230306/src/interface/: Uart.cpp
PROJECT_RK-20230306/src/process/: CapProcess.cpp  Makefile  ProcessMgr.cpp
PROJECT_RK-20230309/: README.md  run.sh
PROJECT_RK-20230309/TESTS/seg_postprocess/: LT_VISION_COMMON.cpp  Makefile  main.cpp
PROJECT_RK-20230309/include/: ProcessMgr.hpp  Uart.hpp  classify.h
PROJECT_RK-20230309/src/ENN/: enn_common.hpp
PROJECT_RK-20230309/src/interface/: Uart.cpp
PROJECT_RK-20230309/src/process/: CapProcess.cpp  CapProcess.hpp  ProcessMgr.cpp
PROJECT_RK-20230322/: CMakeLists.txt  README.md  run.sh
PROJECT_RK-20230322/TESTS/: Makefile  main.cpp
PROJECT_RK-20230322/include/: ProcessMgr.hpp
PROJECT_RK-20230322/src/ENN/: classify.cpp
PROJECT_RK-20230322/src/common/: Configer.cpp
PROJECT_RK-20230322/src/interface/: Uart.cpp
PROJECT_RK-20230322/src/process/: CapProcess.cpp  ProcessMgr.cpp
PROJECT_RK-20230420/: README.md
PROJECT_RK-20230420/BLL_TEST/: Makefile  bll_main.cpp  myTest.sh
PROJECT_RK-20230420/BLL_TEST/src/: Makefile
PROJECT_RK-20230420/TESTS/: main.cpp
PROJECT_RK-20230420/include/: ProcessMgr.hpp  classify.h  getCurrentTime.h
PROJECT_RK-20230420/src/common/: common.cpp
PROJECT_RK-20230420/src/process/: CapProcess.cpp  ProcessMgr.cpp
PROJECT_RK-20230420/tools/Cap/: rtsp_cap1.py
PROJECT_RK-20230420/tools/Undistort/: deploy
PROJECT_RK/BLL_TEST/include/: camera.h  ptzControl.h
PROJECT_RK/BLL_TEST/src/: testFuncs.cpp
PROJECT_RK/TESTS/: Makefile  main.cpp  testImageCropping.cpp  test_model.cpp
PROJECT_RK/include/: Configer.hpp  ProcessMgr.hpp  Segmentation.hpp  Uart.hpp  Yolo.hpp  common.h  dhconfigsdk.h  imageCropping.h  version.h
PROJECT_RK/models/: segmentation.rknn
PROJECT_RK/src/: Makefile
PROJECT_RK/src/ENN/: LT_VISION_COMMON.h  Segmentation.cpp  Yolo.cpp  classify.cpp  detection_output.cpp  detection_output.h  (+3 more)
RKNN_development_documents/: .~lock.RV1126开发板文档-2023-03-07.docx#  README.md  RV1126开发板文档-2023-03-07.docx  RV1126开发板文档-2023-03-10.docx
auto_labeling_2023_03_09/: README.md
auto_labeling_2023_03_09/src/: yolov8_pred_to_labelme_jsons.py
connector_detection_2023_06_13/: .gitignore  README.md
connector_detection_2023_06_13/src/: capture_video_frames.py  connector.yaml  connector_detection.py  fix_images.py  json2txt_yolov8.py  parsing_yaml.py  search_lr.py  select_conf_iou.py  split_train_val_test.py  xywh_2_tlbr.py
foreign_matter_classification_2023_05_09/: README.md
foreign_matter_classification_2023_05_09/documentation/: 光伏板异物分类 2023-05-04.xlsx  测试方法.md
foreign_matter_classification_2023_05_09/src/: foreign_matter_classification.py  search_lr.py  split_train_val_test.py
infaredImageDetect/: LT_img_augumentation函数封装.hdev  transDetectionTxt2DetectoinJson.py  图像增强-对图像做多种变换.hdev  将分割或检测的索引图转为检测需要的框.hdev
infrared_detection_2023_05_30/: .gitignore  README.md
infrared_detection_2023_05_30/src/: capture_video_frames.py  infrared.yaml  infrared_detection.py  json2txt_yolov8.py  search_lr.py  split_train_val_test.py
segmentation_online_openvino_2023_02_23/: README.md  test_realsense_camera.launch
segmentation_online_openvino_2023_02_23/devel/: .catkin  _setup_util.py  setup.sh
segmentation_online_openvino_2023_02_23/src/camera_openvino/: CMakeLists.txt  package.xml
segmentation_online_openvino_2023_02_23/src/camera_openvino/cfg/: camera_openvino.cfg
segmentation_online_openvino_2023_02_23/src/camera_openvino/launch/: camera_openvino.launch
segmentation_online_openvino_2023_02_23/src/camera_openvino/rviz/: solar.rviz
segmentation_online_openvino_2023_02_23/src/camera_openvino/src/: camera_openvino.cpp  camera_tensorrtConfig.h  main.cpp  openvinoInferenceUnetpp.cpp  openvinoInferenceUnetpp.h  openvinoTest-Ok.cpp
segmentation_openvino_2023_02_17/: CMakeLists.txt
segmentation_openvino_2023_02_17/cfg/: camera_tensorrt.cfg
segmentation_openvino_2023_02_17/model/: 400x640.onnx  400x640_v2.onnx  416x512.onnx
segmentation_openvino_2023_02_17/src/: camera_openvino.cpp  main.cpp  openvinoInferenceUnetpp.cpp  openvinoInferenceUnetpp.h  openvinoTest.cpp
trt_inference_unetpp/: CMakeLists.txt  main.cpp  postprocessIndexImage.cpp  postprocessIndexImage.h  readme.txt  trtInferUnetpp.cpp  trtInferUnetpp.h
weather_classification_train/: data_divide.py  read_batch_data.py  resnet.py  train.py
wether_classification_deployment/: README.md  config.mk  pull.sh  run.sh
wether_classification_deployment/TESTS/: test_ffmepg_rtsp.cpp
wether_classification_deployment/include/: Configer.hpp
wgn/: 天气分类补充.md
yolov8_2023_03_03/: README.md
yolov8_2023_03_03/src/: json2txt_yolov8.py  parsing_yolo8_model_name.py  segment_demo.py
(+81 files in other folders)
